# tricrypt-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  testfile.txt  testfile.txt.all.json  testfile.txt.enc
.github/workflows/: release.yaml
src/: decryption.rs  encryption.rs  generate.rs  main.rs
src/.github/workflows/: release.yaml
src/hashing/: extract_keys.rs  file_hash.rs  mod.rs  padding.rs  trihash.rs
src/imports/: message.rs  xrng.rs
src/other/: append_file.rs  copy_file.rs  mod.rs  overwrite_file.rs  truncate_file.rs
src/symmetric/: aes.rs  camellia.rs  cbc.rs  chacha20.rs  cipher.rs  gift.rs  kuznyechik.rs  magma.rs  mod.rs  serpent.rs  sm4.rs  threefish.rs  twofish.rs  xtea.rs
